--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -15,29 +15,27 @@
     ]
   },
   "dependencies": {
-    "@project/contracts": "^1.0.0",
-    "@apollo/react-hooks": "^4.0.0",
-    "@ethersproject/contracts": "^5.3.0",
-    "@ethersproject/providers": "^5.3.1",
-    "@testing-library/dom": "^7.31.2",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^13.1.9",
-    "@types/react": "^17.0.11",
-    "@walletconnect/web3-provider": "^1.4.1",
-    "apollo-boost": "^0.4.9",
-    "apollo-client": "^2.6.10",
-    "apollo-utilities": "^1.3.4",
-    "chalk": "^4.1.1",
-    "eslint": "^7.29.0",
-    "eslint-plugin-flowtype": "^5.7.2",
-    "graphql": "^15.5.0",
-    "ipfs-http-client": "^50.1.2",
+    "@my-app/contracts": "^1.0.0",
+    "@apollo/client": "^3.5.10",
+    "@ethersproject/contracts": "^5.6.0",
+    "@ethersproject/providers": "^5.6.0",
+    "@testing-library/dom": "^8.11.3",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/react": "^17.0.40",
+    "graphql": "^16.3.0",
+    "ipfs-deploy": "^11.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scripts": "4.0.3",
-    "styled-components": "^5.3.0",
-    "web3modal": "^1.9.3"
+    "styled-components": "^5.3.3",
+    "@usedapp/core": "^1.1.5",
+    "@uniswap/sdk": "^3.0.2",
+    "@uniswap/v2-core": "^1.0.1",
+    "@uniswap/v2-periphery": "^1.1.0-beta.0",
+    "ethers": "^5.7.0",
+    "web3": "^1.7.5"
   },
   "eslintConfig": {
     "extends": [
@@ -51,5 +49,8 @@
     "ipfs": "yarn build && node scripts/ipfs.js",
     "start": "react-scripts start",
     "test": "react-scripts test"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.2"
   }
 }
