--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -29,6 +29,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scripts": "4.0.3",
+    "react-icons": "^4.8.0",
     "styled-components": "^5.3.3",
     "@usedapp/core": "^1.1.5",
     "@uniswap/sdk": "^3.0.2",
