--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@project/monorepo",
+  "name": "@my-app/monorepo",
   "version": "1.0.0",
   "keywords": [
     "ethereum",
@@ -9,11 +9,11 @@
   ],
   "private": true,
   "scripts": {
-    "react-app:build": "yarn workspace @project/react-app build",
-    "react-app:eject": "yarn workspace @project/react-app eject",
-    "react-app:ipfs": "yarn workspace @project/react-app ipfs",
-    "react-app:start": "yarn workspace @project/react-app start",
-    "react-app:test": "yarn workspace @project/react-app test"
+    "react-app:build": "yarn workspace @my-app/react-app build",
+    "react-app:eject": "yarn workspace @my-app/react-app eject",
+    "react-app:ipfs": "yarn workspace @my-app/react-app ipfs",
+    "react-app:start": "yarn workspace @my-app/react-app start",
+    "react-app:test": "yarn workspace @my-app/react-app test"
   },
   "workspaces": {
     "packages": [
@@ -24,6 +24,7 @@
     "tailwindcss": "^3.3.2"
   },
   "dependencies": {
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.11.2"
   }
 }
