--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@project/react-app",
+  "name": "@my-app/react-app",
   "version": "1.0.0",
   "homepage": "./",
   "browserslist": {
@@ -30,6 +30,7 @@
     "react-dom": "17.0.2",
     "react-scripts": "4.0.3",
     "react-icons": "^4.8.0",
+    "react-router-dom": "^6.11.2",
     "styled-components": "^5.3.3",
     "@usedapp/core": "^1.1.5",
     "@uniswap/sdk": "^3.0.2",
@@ -55,3 +56,4 @@
     "tailwindcss": "^3.3.2"
   }
 }
+
