--- a/package.json
+++ b/package.json
@@ -21,10 +21,18 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.22.4",
+    "@babel/preset-react": "^7.22.3",
     "tailwindcss": "^3.3.2"
   },
   "dependencies": {
+    "mongodb": "^5.5.0",
+    "node": "^20.2.0",
+    "react": "^17.0",
+    "react-dom": "^17.0",
     "react-icons": "^4.8.0",
-    "react-router-dom": "^6.11.2"
+    "react-refresh-loader": "^0.2.0",
+    "react-router-dom": "^6.11.2",
+    "react-scripts": "4.0.3"
   }
 }
