--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -2,42 +2,50 @@
   "name": "@my-app/react-app",
   "version": "1.0.0",
   "homepage": "./",
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ],
   "dependencies": {
-    "@my-app/contracts": "^1.0.0",
     "@apollo/client": "^3.5.10",
     "@ethersproject/contracts": "^5.6.0",
     "@ethersproject/providers": "^5.6.0",
+    "@my-app/contracts": "^1.0.0",
+    "@sanity/client": "^3.0.3",
     "@testing-library/dom": "^8.11.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^17.0.40",
-    "graphql": "^16.3.0",
-    "ipfs-deploy": "^11.2.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-scripts": "4.0.3",
-    "react-icons": "^4.8.0",
-    "react-router-dom": "^6.11.2",
-    "styled-components": "^5.3.3",
-    "@usedapp/core": "^1.1.5",
     "@uniswap/sdk": "^3.0.2",
     "@uniswap/v2-core": "^1.0.1",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
+    "@usedapp/core": "^1.1.5",
+    "axios": "^1.4.0",
     "ethers": "^5.7.0",
-    "web3": "^1.7.5"
+    "graphql": "^16.3.0",
+    "ipfs-deploy": "^11.2.0",
+    "mongodb": "^5.5.0",
+    "node": "^20.2.0",
+    "react": "^17.0",
+    "react-dom": "^17.0",
+    "react-icons": "^4.3.1",
+    "react-modal": "^3.14.4",
+    "react-spinners": "^0.11.0",
+    "react-router-dom": "^6.11.2",
+    "react-scripts": "4.0.3",
+    "web3": "^1.7.5",
+    "@sanity/base": "^2.26.0",
+    "@sanity/core": "^2.26.0",
+    "@sanity/default-layout": "^2.26.0",
+    "@sanity/default-login": "^2.26.0",
+    "@sanity/desk-tool": "^2.26.0",
+    "@sanity/eslint-config-studio": "^2.0.0",
+    "@sanity/vision": "^2.26.0",
+    "eslint": "^8.6.0",
+    "prop-types": "^15.7",
+    "styled-components": "^5.2.0"
   },
   "eslintConfig": {
     "extends": [
@@ -53,7 +61,12 @@
     "test": "react-scripts test"
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.2"
+    "@babel/preset-env": "^7.22.4",
+    "@babel/preset-react": "^7.22.3",
+    "tailwindcss": "^3.3.2",
+    "@types/node": "17.0.13",
+    "@types/react": "17.0.38",
+    "@types/react-modal": "^3.13.1",
+    "typescript": "4.5.5"
   }
 }
-
